# limitorderbook

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: limitorderbook.h  messagetypes.h  orderpool.h  ringbuffer.h
src/: limitorderbook.cpp  main.cpp  orderpool.cpp  ringbuffer.cpp
